infra/argo/http_route.yaml
# The API server should be run with TLS disabled.
# Edit the argocd-server deployment to add the --insecure flag to the argocd-server command
# or set server.insecure: "true" in the argocd-cmd-params-cm ConfigMap
# kubectl patch configmap argocd-cmd-params-cm -n argocd --patch '{"data":{"server.insecure":"true"}}'
# then rolloit the argocd-server deployment to apply the changes

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "argocd.lab.s-miras.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          namespace: argocd
          port: 80
          weight: 1
